--- a/index.html
+++ b/index.html
@@ -2,9 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+  <link rel="stylesheet" href="css/style.css">
+  <script defer src="scripts/vue.min.js"></script>
+  <script defer src="scripts/script.js"></script>
+    <title>PnCK2</title>
 </head>
 <body>
+<div id="app">
+    <columns></columns>
+</div>
 
 </body>
 </html>
