--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="css/style.css">
   <script defer src="scripts/vue.min.js"></script>
   <script defer src="scripts/script.js"></script>
-    <title>PnCK2</title>
+    <title>Notes</title>
 </head>
 <body>
 <div id="app">
