--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
   <link rel="stylesheet" href="css/style.css">
   <script defer src="scripts/vue.min.js"></script>
-  <script defer src="scripts/script.js"></script>
+  <script defer src="scripts/main.js"></script>
     <title>Notes</title>
 </head>
 <body>
